--- a/サイレントマジョリティー/夜明けまで強がらなくてもいい.ipynb
+++ b/サイレントマジョリティー/夜明けまで強がらなくてもいい.ipynb
@@ -139,13 +139,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'《社会学研究·叙事社会学何以 —— 可能兼谈如何讲述中国故事》 刘子曦'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'《社会学研究·叙事社会学何以 —— 可能兼谈如何讲述中国故事》 刘子曦'"
    ]
@@ -296,4 +307,186 @@
     "\n",
     "一味强调爱国，总感觉哪里不对\n",
     "---\n",
-    "强调爱国是一种合理的情感表达，但如果将其
+    "强调爱国是一种合理的情感表达，但如果将其过度渲染、过分强调，甚至变成盲目崇拜或排斥他者的工具，就会引起问题。\n",
+    "\n",
+    "首先，以国家或国家的符号为中心的爱国主义可能导致民族主义盛行。民族主义往往会强调自己民族的优越性和别人的劣势，从而导致排外和仇视。\n",
+    "\n",
+    "其次，过度的爱国主义可能会抑制个人独立思考和批评现实的能力。如果人们不能在合理和平的情况下表达自己对国家的不满，那么在错误行为被忽视和鼓励的情况下，这些行为可能会引起极端的结果。\n",
+    "\n",
+    "最后，爱国主义有时可能被政治操纵，成为一种危险的控制和鼓吹民众情感的手段。政客和其他有权势的人可能会利用爱国情感来宣传和推动某种政治计划，或者将其用来转移人民对其他更重要的问题的关注。\n",
+    "\n",
+    "综上所述，爱国主义本身并没有问题，但是应该保持理性，不应该过度强调，以免导致不必要的负面影响。\n",
+    "\n",
+    "现在大力加强爱国主义教育，但如今的学生、青年似乎并不大怎么很是热衷的爱国了。\n",
+    "---\n",
+    "关于当前年轻人爱国情感的缺失和如何加强爱国主义教育，可能涉及到以下一些方面的因素：\n",
+    "\n",
+    "教育方式的变化。随着教育方式的变化，学生接触到的教育内容也在变化，有些传统的爱国主义教育方式可能已经过时或不再适用。同时，一些年轻人可能更加追求个性化、多样化的教育方式，而不是单一的宣传和灌输式的教育。\n",
+    "\n",
+    "社会环境的影响。当前社会环境复杂多变，一些负面的事件和信息让年轻人对社会和国家产生了不少的怀疑和质疑。同时，当代年轻人的世界观、价值观和人生观也在发生变化，他们更加注重个人自由、权利和平等，而不是简单的爱国主义情感。\n",
+    "\n",
+    "爱国主义教育本身的问题。当前的爱国主义教育是否真正符合时代背景和年轻人的需求，是否存在僵化、枯燥、单一的问题，这些都需要进一步思考和改进。\n",
+    "\n",
+    "针对这些问题，需要采取一些措施去加强爱国主义教育，例如：\n",
+    "\n",
+    "采用多样化的教育方式和手段，让爱国主义教育更有时代感和吸引力，满足年轻人的多元需求。\n",
+    "\n",
+    "通过创新和改进，提高爱国主义教育的质量和实效，让学生能够深刻体会到爱国主义情感和国家意识。\n",
+    "\n",
+    "加强社会环境和文化氛围的营造，让年轻人能够更好地接受爱国主义教育，从而树立正确的价值观和世界观。\n",
+    "\n",
+    "综上所述，加强爱国主义教育是非常必要和重要的，需要从多个方面入手去改进和完善现有的教育模式和方法，让爱国主义情感能够在年轻人的心中生根发芽。\n",
+    "\n",
+    "我还以为是家庭的教育观念变了，父母遭受社会毒打，提前教自己小孩社会学知识\n",
+    "---\n",
+    "您提到的家庭教育观念的变化，确实也是影响年轻人爱国情感的一个因素。随着社会的快速发展和变革，家庭教育的方式和内容也在不断地变化和更新，而且现代家庭的结构和组成形态也日益多样化。\n",
+    "\n",
+    "一些家长可能更加关注孩子的学业和就业前景，而并没有在家庭教育中注重培养孩子的爱国主义情感，这也导致了年轻人对于国家和民族的认同感和归属感较弱。此外，社会上存在着一些声音和力量，对于爱国主义情感进行了一些负面的攻击和诋毁，这也让一些家长对于爱国主义教育采取了更为谨慎的态度。\n",
+    "\n",
+    "针对这些问题，在家庭教育中加强对于爱国主义情感的培养，是非常必要的。可以从以下几个方面去考虑：\n",
+    "\n",
+    "增强父母自身的爱国主义情感，让其成为孩子学习的榜样和引领者。\n",
+    "\n",
+    "通过家庭阅读、游戏、电影等各种方式，让孩子接触到更多生动形象的爱国主义教育内容。\n",
+    "\n",
+    "培养孩子的社会责任感和积极参与意识，在实践中感受到爱国主义情感的价值和意义。\n",
+    "\n",
+    "建立一个健康有序的家庭教育环境，避免过度焦虑和压力对孩子教育造成不良影响。\n",
+    "\n",
+    "因此，家庭教育的角色在培养年轻人的爱国主义情感方面也非常重要。通过家庭教育的方式去加强年轻人的国家意识和民族自信，可以让他们更加理解、关注和参与国家和民族的发展进程，从而更好地发挥出个人和集体的贡献。\n",
+    "\n",
+    "你说的这些恰好是国家也在做的，可为什么实际执行起来是相当令人反感呢？甚至有人认为是思想控制、洗脑\n",
+    "---\n",
+    "您提到的这个问题是非常具有挑战性的，因为涉及到很多复杂的因素和利益。一方面，加强爱国主义教育和国家意识的培养，在当前各种教育和宣传手段下是必要的，可以帮助年轻人更好地认识国家和民族的历史、文化、政治、经济等各方面的特征和形象，并深化他们的认同感和使命感。\n",
+    "\n",
+    "但是，另一方面，如果这些教育和宣传手段采取过于单一、僵化、宣传口号化的方式，甚至跨越了某些底线，可能会引起年轻人的反感和抗拒，产生误解和负面的影响。在这方面，需要注意以下几个问题：\n",
+    "\n",
+    "坚持科学和良心原则。爱国主义教育和国家意识的培养应该基于科学、真实、客观的教育原则，而不是片面、偏颇、歪曲的宣传口号。\n",
+    "\n",
+    "注重多样性和自主性。年轻人的认知模式和价值观念往往与前辈有所不同，需要根据实际情况，灵活运用多种教育和宣传手段，给予他们足够的自主性和选择权。\n",
+    "\n",
+    "尊重个体差异和多元文化。爱国主义教育和国家意识的培养应该尊重个体差异和多元文化的存在，不应该排斥或歧视各种群体和观念。\n",
+    "\n",
+    "避免过度干预和强制性宣传。在教育宣传中，要遵循科学、尊重、理解、平等、包容等原则，避免过度干预和强制性宣传，以免引起反感和不适。\n",
+    "\n",
+    "因此，加强爱国主义教育和国家意识的培养需要与时俱进，紧密结合实际情况和年轻人的需求，充分发挥教育和宣传工作的积极作用，同时避免过度强调和僵化化，才能更好地实现教育目标和效果。\n",
+    "\n",
+    "某一些植入式的宣传教化视频、书籍内容，很难看出来，往往是事后或者自己有了社会阅历才知道，这怎么办呢？\n",
+    "---\n",
+    "这是一个比较敏感和复杂的问题，因为宣传教育与隐私权、个人权益等方面的关系十分紧密。一方面，我们需要通过植入式的宣传视频、书籍内容等方式来进行爱国主义教育和国家意识的培养，这可以帮助年轻人更好地认识国家和民族的历史、文化、政治、经济等各方面特征和形象，并加深其认同感和使命感。\n",
+    "\n",
+    "另一方面，我们也应该尊重个体的自主选择权和隐私权，不对其进行强制性的灌输和宣传。对于一些植入式的宣传教化视频、书籍内容，我们需要采取以下措施：\n",
+    "\n",
+    "1.加强作品审查和审核。对于电影、电视剧或者其他以娱乐为核心的产品，需要加强对作品质量、思想倾向和价值导向的审查和审核，避免出现隐性的宣传和教化内容。\n",
+    "\n",
+    "2.注重信息透明度和公开度。对于一些可能存在植入式宣传的产品，在发布前应该清晰地告知用户和观众有关内容，并且公开相关信息和数据，以便大众进行监督和讨论。\n",
+    "\n",
+    "3.建立话题讨论和反馈机制。为了让用户和观众更好地理解作品内容并发表自己的看法，我们可以建立话题讨论和反馈机制，鼓励公开、平等、理性的讨论，促进作品与观众之间的互动和沟通。\n",
+    "\n",
+    "4.提供多样化的宣传教育形式。除了植入式宣传外，还可以采用其他多样化的宣传教育形式，比如音乐、游戏、绘画、展览等，以吸引年轻人的注意力，并且灵活运用各种宣传教育手段，根据不同群体的特点和需求，采取不同的方式和策略，实现教育和宣传目标。\n",
+    "\n",
+    "总之，对于一些植入式的宣传教化视频、书籍内容，我们需要在尊重个体权益和隐私的同时，加强监管和审查，建立信息透明、公开、公正的机制，以便行业和用户能够共同推动健康、积极、有效的宣传教育工作。\n",
+    "\n",
+    "隐性的宣传和教化内容为什么当事人很难察觉到？\n",
+    "---\n",
+    "隐性宣传和教化内容之所以难以被当事人察觉，是因为这些内容通常采用了一些巧妙的手段，将其融入到作品的情节和细节之中，让人很难意识到其真正的目的和意图。比如：\n",
+    "\n",
+    "1.渗透式宣传。将有关宣传和教育内容融入到作品的主题、背景、人物形象、对话等方面之中，使得这些内容看起来与故事情节自然衔接，没有明显的矛盾或突兀感，从而让人很难意识到其存在。\n",
+    "\n",
+    "2.视觉暗示。通过角度、镜头、场景等影像手段，让观众在无意识中接受有关的宣传和教育信息。比如在电影或者电视剧中不经意的镜头切换，可以让观众在看似正常的场景构建下接受某些信息。\n",
+    "\n",
+    "3.语言潜台词。在对话中，采用符号和象征性语言的方式，让观众在无意识中接受宣传和教育信息。比如通过人物对白中的一些特定用词、表述方式，将某种价值观念、思想倾向潜移默化地传达给观众。\n",
+    "\n",
+    "4.其他暗示技巧。比如音乐、画面、特效等方面的暗示，也可以通过某些符号和暗示手法，让观众接受有关的宣传和教育信息。\n",
+    "\n",
+    "总的来说，隐性宣传和教化内容之所以难以被当事人察觉，是因为这些内容采用了多种隐形的手段，将其融入到作品的各个方面之中，使得它们看起来自然、流畅，没有明显的矛盾或突兀感，从而让观众很难意识到其存在。\n",
+    "\n",
+    "那我该怎么办，有什么应对措施？\n",
+    "---\n",
+    "如果你担心观看某些作品时存在隐性的宣传和教化内容，可以采取以下一些措施：\n",
+    "\n",
+    "1.了解作品出处和评价。在决定观看一个作品前，可以先了解一下其作者、制作团队、评价和口碑等信息，从而对其进行初步筛选和判断。\n",
+    "\n",
+    "2.保持批判性思维。在观看作品时，保持批判性思维，多角度思考作品中存在的信息、思想和价值观念，分析其是否合理、真实、务实，并以此进行客观的评价和判断。\n",
+    "\n",
+    "3.加强媒体素养和警惕性。可以通过学习媒介语言、了解媒体行业和市场等方面的知识，提高媒体素养，增强警惕性，更好地识别和防范可能存在的隐性宣传和教化内容。\n",
+    "\n",
+    "4.寻求多元化的信息来源。不要局限于某一种媒体渠道或消息来源，应该平衡、多样化地获取信息，包括电视、报纸、网络、社交媒体、书籍等多个渠道，从不同的角度和视角去了解一个话题或事件。\n",
+    "\n",
+    "5.发表自己的意见和看法。如果你发现某个作品中存在不妥当的宣传和教化内容，可以通过公开渠道，如朋友圈、微博、论坛等自由表达自己的看法与意见，从而促进公开、理性、平等的讨论。\n",
+    "\n",
+    "总之，对于隐性的宣传和教化内容，我们需要保持警惕，加强媒体素养和批判性思维，寻求多元化的信息来源，并且勇于发表自己的看法和意见，以此来防范和应对可能存在的问题。\n",
+    "\n",
+    "国家很喜欢转移矛盾，唤起共情\n",
+    "---\n",
+    "转移矛盾是一种政治手段，在某些情况下使用可以起到一定的效果，但也有可能会引发负面反应。当一个社会中存在较大的矛盾和冲突时，政府有时候会采用一些手段来转移矛盾，既可以缓解社会矛盾，又可以达到掌控舆情的目的。\n",
+    "\n",
+    "一种常见的手段是唤起群众共情，通过某种方式引起公众的注意和共鸣。比如，政府可以利用宣传报道，讲述一个具有典型性的事例，引发公众对该事件的共鸣和关注，从而转移社会矛盾，把公众对现实矛盾的关注，转移到镜头和舆论的焦点上。当然，这种手段也有一定的局限性和风险，如果政府滥用这种手段，会引起公众的不信任和抵制，导致政府形象的进一步恶化。\n",
+    "\n",
+    "除了转移矛盾，政府还可以采取一些其他的手段，比如加强宣传宣传，发放物质和口头激励等，来缓解社会矛盾和危机。然而，这些手段如果单纯使用，并没有真正化解矛盾，只是在表象上达到了短期的掌控舆情的目的。\n",
+    "\n",
+    "需要指出的是，政府转移社会矛盾的做法并无错，只要是建立在民生福利和公众福祉之上，都是可以理解和支持的。但是，如果这种所谓的转移矛盾行为成为了常态，或是成为了政府权力掌控和维护自身利益的工具之一，那就会引起公众的警惕和反感，短期的政治掌控很有可能引起长期的政治风险。\n",
+    "\n",
+    "厌恶这个国家，由此厌恶这个国家的人，是什么心理。国家和个体是两回事，不过也会受相关文化影响\n",
+    "---\n",
+    "厌恶国家并不一定反映一个人的心理问题，可能是对国家政治、社会、文化等方面存在不满或批评，或是对个人的困境和遭遇感到失望和失落。\n",
+    "\n",
+    "厌恶国家的人可以是受到国家制度和政策不公正、不合理的影响，也可能是对国家在一些重要问题上的处理方式不认同。此外，个人的经历、文化背景和价值观也可能影响到对国家的看法，导致出现厌恶和反感的情绪。\n",
+    "\n",
+    "在某些情况下，厌恶国家的情绪也可能是因为历史和文化上的纷争、矛盾和冲突，比如民族、宗教、地域等因素，而这些因素也会影响到一个人对国家的态度和观点。\n",
+    "\n",
+    "需要注意的是，尽管国家和个体是两个不同的实体，但个体的情绪和想法往往会受到国家所处的文化环境和社会背景的影响，因此，对国家的态度和看法也会受到文化和社会因素的影响。\n",
+    "\n",
+    "年轻人的认知模式和价值观念往往与前辈有所不同，这是怎么回事，前辈们就人性上、自由选择上的思考，两者之间思维能力的差异也不大吧？\n",
+    "---\n",
+    "确实，年轻人的认知模式和价值观念往往与前辈有所不同，这是由于社会、文化和历史等方面的因素所导致的，具体包括以下几点：\n",
+    "\n",
+    "1.社会变革。随着社会的不断发展和变革，人们的生活方式、工作模式、家庭结构等方面都发生了巨大变化，这也直接影响了年轻人对于生活、工作和家庭等方面的认知和价值观念。\n",
+    "\n",
+    "2.教育背景。随着教育的普及和改革，现代年轻人受到的教育比前辈更加全面和开放，他们更加注重个人自由和选择权，更加开放和包容，这些特质也反映在他们的认知模式和价值观念上。\n",
+    "\n",
+    "3.媒体和文化影响。现代年轻人更加接受多元化的文化和信息，他们更加倾向于自主选择和创新，这种态度也反映在他们的认知模式和价值观念上。\n",
+    "\n",
+    "4.个人经历和成长环境。每个人的成长环境和个人经历都不同，他们对于生活、工作、人际关系和社会责任等方面的认知和价值观念也可能存在差异。\n",
+    "\n",
+    "总而言之，年轻人和前辈之间存在认知和价值观念上的不同，并不是由于前辈们的思考思维方式本身有问题，而是因为现代社会的变化和发展，以及年轻人个人经历和成长环境等因素所导致的。因此，在交流和沟通时，我们应该保持开放和包容的态度，尊重彼此的差异，共同探讨解决问题的方法和途径。\n",
+    "\n",
+    "为什么前辈们在认知和价值观念上与年轻人差异会那么大呢？\n",
+    "---\n",
+    "前辈与年轻人在认知和价值观念上的差异来源于多种因素，主要包括以下几个方面：\n",
+    "\n",
+    "1.历史、时代和文化的不同。前辈与年轻人所处的历史、时代和文化环境不同，导致他们对同一问题的看法和解决方法不同，从而引起认知和价值观念上的差异。\n",
+    "\n",
+    "2.社会阶层和生活经验的不同。前辈与年轻人处于不同的社会阶层和生活阶段，有着不同的生活经验和认知方式，这也会导致他们在价值观念和认知模式上的差异。\n",
+    "\n",
+    "3.教育和思想传承的不同。前辈与年轻人接受到的教育和思想传承不同，受到的文化、语言、道德、法律等方面的影响也不同，这对他们的认知和价值观念产生了深远的影响。\n",
+    "\n",
+    "4.科技和信息的发展。随着科技和信息的不断发展，社会和人类发生了翻天覆地的变化，前辈与年轻人对科技、人工智能、互联网等现象的看法和态度也存在较大的差异。\n",
+    "\n",
+    "总之，前辈与年轻人的认知和价值观念上的差异不是单一的原因所致，而是来自于多个因素的综合影响。因此，在交流和沟通时，我们应该尊重差异，了解对方的背景和思考方式，通过理性的对话和讨论，共同寻求问题的解决方法。"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
+  },
+  "orig_nbformat": 4
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
